source shift bug fixes, changes to trails

--- a/plugins/Trails/Trails.css
+++ b/plugins/Trails/Trails.css
@@ -13,7 +13,7 @@
   background-image: url(images/trails-on.png);
 }
 
-#SSTrailsPlugInIframe
+#SSTrailsPlugInClipppingArea
 {
   position: absolute;
   left: 0px;
@@ -21,9 +21,10 @@
   width: 100%;
   height: 100%;
   border: none;
+  overflow: hidden;
 }
 
-div#SSTrailsPlugInScrollBackground
+div#SSTrailsPlugInScrollArea
 {
   position: absolute;
   left: -500000px;
